# trase-regions

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  simplify-geometries.js
data/: metadata.json
data/all/: 1.geojson  1.topo.json  2.geojson  2.topo.json  3.geojson  3.topo.json  4.geojson  4.topo.json  5.geojson  5.topo.json  6.geojson  6.topo.json  biome.geo.json  biome.geojson  biome.topo.json  canton.geo.json  country.geo.json  district.geo.json  mesoregion.geo.json  microregion.geo.json  municipality.geo.json  parish.geo.json  port.geo.json  province.geo.json  region.geo.json  state.geo.json  wood-pulp-concession.geo.json
data/ar/: 1.geojson  1.topo.json  2.geojson  2.topo.json  3.geojson  3.topo.json  biome-1-9999.geo.json  biome.geojson  biome.topo.json  country-1-9999.geo.json  country.geojson  country.topo.json  department-1-9999.geo.json  department.geojson  department.topo.json  province-1-9999.geo.json  province.geojson  province.topo.json
data/bo/: 1.geojson  1.topo.json  2.geojson  2.topo.json  3.geojson  3.topo.json  4.geojson  4.topo.json  country-1-9999.geo.json  country-1-9999.topo.json  country.geojson  country.topo.json  department-1-9999.geo.json  department.geojson  department.topo.json  municipality-1-9999.geo.json  municipality.geojson  municipality.topo.json  province-1-9999.geo.json  province.geojson  province.topo.json
data/br/: 1.geojson  1.topo.json  2.geojson  2.topo.json  (+28 more)
extract_trase_regions/: __main__.py  extract_wood_pulp_concessions.py  secrets.yml.sample
tests/: test_extract_trase_regions.py
(+129 files in other folders)
