[tool.poetry]
name = "trase-regions"
version = "0.1.0"
description = "Extracts Trase spatial data and builds it as geojson and topojson"
authors = ["Bernardo Loureiro"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
PyYAML = "^6.0"
topojson = "^1.3"
geopandas = "^0.10.2"
geojson = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
