[tool.poetry]
name = "trase-regions"
version = "0.1.0"
description = "Extracts Trase spatial data and builds it as geojson"
authors = ["Bernardo Loureiro"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.0"
psycopg2 = "^2.9.3"
PyYAML = "^6.0"
geopandas = "^1.0.0"
geojson = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
